"""
Newsletter Backend â€” main orchestrator.

This is the entry point that:
1. Fetches content from all services (weather, news, stocks, quotes, etc.)
2. Assembles the payload
3. Calls the email-service via gRPC to render & send the newsletter

Triggered by a cron job (e.g., every morning at 7 AM).
Usage: uv run python -m src.main
"""

from __future__ import annotations

import datetime
import sys
import traceback
from concurrent.futures import ThreadPoolExecutor, as_completed

from .config import cfg
from .grpc_client import build_request, send_newsletter
from .services import (
    fetch_astronomy,
    fetch_hn_stories,
    fetch_news,
    fetch_stocks,
    fetch_weather,
)


def _date_string() -> str:
    """Generate a Chinese-formatted date string like '2026å¹´2æœˆ8æ—¥ Â· æ˜ŸæœŸæ—¥'."""
    today = datetime.date.today()
    weekdays = ["æ˜ŸæœŸä¸€", "æ˜ŸæœŸäºŒ", "æ˜ŸæœŸä¸‰", "æ˜ŸæœŸå››", "æ˜ŸæœŸäº”", "æ˜ŸæœŸå…­", "æ˜ŸæœŸæ—¥"]
    weekday = weekdays[today.weekday()]
    return f"{today.year}å¹´{today.month}æœˆ{today.day}æ—¥ Â· {weekday}"


def _fetch_all() -> dict:
    """Fetch all content sections in parallel."""
    sections: dict[str, object] = {}

    tasks = {
        "weather": fetch_weather,
        "news": fetch_news,
        "stocks": fetch_stocks,
        "hn": fetch_hn_stories,
        "astronomy": fetch_astronomy,
    }

    with ThreadPoolExecutor(max_workers=8) as pool:
        futures = {pool.submit(fn): name for name, fn in tasks.items()}

        for future in as_completed(futures):
            name = futures[future]
            try:
                sections[name] = future.result()
                print(f"  âœ…  {name}")
            except Exception as e:
                print(f"  âŒ  {name}: {e}")
                traceback.print_exc()
                # Use safe defaults
                if name in ("news", "stocks", "hn"):
                    sections[name] = []
                elif name == "astronomy":
                    sections[name] = {"sunrise": "--", "sunset": "--", "day_length": "--"}
                else:
                    sections[name] = {}

    return sections


def main() -> None:
    """Main entry point â€” orchestrate fetching and sending."""
    print("=" * 50)
    print("ğŸ“°  æ¯æ—¥ç®€æŠ¥ â€” Newsletter Backend")
    print("=" * 50)
    print()

    date_str = _date_string()
    print(f"ğŸ“…  {date_str}")
    print(f"ğŸ“¬  Recipient: {cfg.recipient_name} <{cfg.recipient_email}>")
    print()

    # â”€â”€ Fetch all content â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    print("ğŸ”„  Fetching contentâ€¦")
    sections = _fetch_all()
    print()

    # â”€â”€ Build gRPC request â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    print("ğŸ“¦  Building gRPC requestâ€¦")

    # Merge astronomy data into weather
    weather_data = dict(sections.get("weather", {}))
    astro_data = sections.get("astronomy", {})
    if astro_data:
        weather_data.update({
            "sunrise": astro_data.get("sunrise", ""),
            "sunset": astro_data.get("sunset", ""),
            "day_length": astro_data.get("day_length", ""),
            "golden_hour": astro_data.get("golden_hour", ""),
            "astro_note": astro_data.get("note", ""),
        })

    request = build_request(
        weather=weather_data,
        top_news=sections.get("news", []),
        stocks=sections.get("stocks", []),
        hn_stories=sections.get("hn", []),
        date_str=date_str,
    )

    # â”€â”€ Send via gRPC â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
    print("ğŸ“¡  Sending to email-serviceâ€¦")
    try:
        response = send_newsletter(request)
        if response.success:
            print("\nğŸ‰  Newsletter sent successfully!")
            print(f"    Message ID: {response.message_id}")
        else:
            print(f"\nâŒ  Failed to send: {response.error}")
            sys.exit(1)
    except Exception as e:
        print(f"\nâŒ  gRPC call failed: {e}")
        print("    Is the email-service running? (make dev-server)")
        traceback.print_exc()
        sys.exit(1)


if __name__ == "__main__":
    main()
